Make sure long names on feed page don't wrap

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -109,6 +109,7 @@ textarea {
 
 .user-list .profile-info .profile-name {
   text-align: center;
+  white-space: nowrap;
 }
 
 .user-search-box {
